# BQ25672

./: CMakeLists.txt  idf_component.yml
include/: bq25672.h  bq25672_registers.h  bq25672_types.h
src/: bq25672.c
test/system/: test.c
test/unit/: test.c
